--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y graphviz
+          apt-get update
+          apt-ginstall -y graphviz
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
           python -m pip install setuptools wheel twine
