--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz
+          sudo apt-get install -y libgraphviz-dev graphviz
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
           python -m pip install setuptools wheel twine
