--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Run tests
         run: |
           python -m unittest discover -s .
+        env:
+          PYTHONPATH: $PYTHONPATH:$(pwd)
           
       - name: Build distribution package
         run: |
