--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,10 +21,10 @@ jobs:
           python -m pip install setuptools wheel twine
 
       - name: Run tests
+        env:
+          PYTHONPATH: "${{ github.workspace }}"
         run: |
           python -m unittest discover -s .
-        env:
-          PYTHONPATH: $PYTHONPATH:$(pwd)
           
       - name: Build distribution package
         run: |
