--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,6 @@ jobs:
           sudo apt-get install -y libgraphviz-dev graphviz
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-          python -m pip install setuptools wheel twine
 
       - name: Run tests
         env:
@@ -33,6 +32,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          python -m pip install setuptools wheel twine
 
       - name: Build distribution package
         run: |
